--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,7 @@
             "command": "/usr/bin/g++",
             "args": [
                 "-std=c++17",
+                "-D=DEBUG",
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
