--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,12 +7,15 @@
             "args": [
                 "-std=c++17",
                 "-D=DEBUG",
-                "-fdiagnostics-color=always",
                 "-g",
-                "${file}",
+                "-O2",
+                "-Wall",
+                "-Wextra",
+                "-fdiagnostics-color=always",
                 "-o",
-                // "${fileDirname}/${fileBasenameNoExtension}"
-                "${workspaceRoot}/debug.out"
+                // "${fileDirname}/${fileBasenameNoExtension}",
+                "${workspaceRoot}/debug.out",
+                "${file}"
             ],
             "options": {
                 "cwd": "${fileDirname}"
