--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,8 @@
             "args": [
                 "-std=c++17",
                 "-D=DEBUG",
+                "-I",
+                "~/prog/repos/ac-library",
                 "-g",
                 "-O2",
                 "-Wall",
